syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "ServiceNet";

package pillow;

service Pillow{
    rpc GetDatas(Empty) returns (Datas);
    rpc GetData(DataID) returns (Data);
    rpc GetPillowsByStressRate(ParamToFind) returns (Datas);
    rpc GetPillowsByHeartRate(ParamsToFind) returns (Datas);
    rpc GetPillowsBySnoringRange(ParamsToFind) returns (Datas);
    rpc GetPillowsByRespirationRate(ParamsToFind) returns (Datas);
    rpc AddData(DataDto) returns (Empty);
    rpc UpdateData(Data) returns (Data);
    rpc DeleteData(DataID) returns (Empty);
    rpc GetAvgHeartRate(Empty) returns (AvgHeartRate);
    rpc GetAvgStressLevel(Empty) returns (AvgStressLevel);
}

message DataDto {
  string snoringRange = 1;
  string respirationRate = 2;
  string bodyTemperature = 3;
  string limbMovement = 4;
  string bloodOxygen = 5;
  string rem = 6;
  string hoursSleeping = 7;
  string heartRate = 8;
  string stresState = 9;
}

message ParamsToFind{
    double min = 1;
    double max = 2;
}

message ParamToFind{
    double value = 1;
}

message DataID{
    string _id = 1;
}

message Data {
    string _id=1;
    string snoringRange = 2;
    string respirationRate = 3;
    string bodyTemperature = 4;
    string limbMovement = 5;
    string bloodOxygen = 6;
    string rem = 7;
    string hoursSleeping = 8;
    string heartRate = 9;
    string stresState = 10;
  }

  message Empty{};

  message Datas{
    repeated Data datas = 1;
  }
  message ResponseCode{
    int32 status=1;
    string text=2;
  }

  message AvgHeartRate{
    double avgHeartRate=1;
  }

  message AvgStressLevel{
    double avgStressLevel=1;
  }